Switched variant disabled flag to boolean
